@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA
  *
- * $Id: dvdnav.c,v 1.32 2004/10/08 20:44:34 mroi Exp $
+ * $Id: dvdnav.c,v 1.33 2004/12/20 19:27:20 mroi Exp $
  *
  */
 
@@ -404,7 +404,7 @@ dvdnav_status_t dvdnav_get_next_cache_block(dvdnav_t *this, uint8_t **buf,
   if(!this->started) {
     /* Start the VM */
     if (!vm_start(this->vm)) {
-      printerr ("Encrypted DVD");
+      printerr("Encrypted or faulty DVD");
       return DVDNAV_STATUS_ERR;
     }
     this->started = 1;
